--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -24,26 +24,13 @@
 </p>
 
 <h2>Comments</h2>
-<%= render @article.comments %>
-  
+<%# byebug %>
+
+<%= render 'comments/comment' %>
+
+<%= render 'comments/form' %>
 
 
-<h2>Add a comment:</h2>
-<%#= render 'comments/form' %>
 
-<%= form_with(model: [ @article, @article.comments.build ], local: true) do |form| %>
-  <p>
-    <%= form.label :User %><br>
-    <%= form.text_field :commenter %>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
 
-<%= link_to 'Edit', edit_article_path(@article) %>
 <%= link_to 'Back', articles_path %>
