--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+
+.comment-box{border: 2px solid; margin: 30px; padding: 15px;}
+.reply-box{border: 2px solid; margin: 30px; padding: 15px;}
