--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
     <th> colspan="5"</th>
   </tr>
  
-  <% @article.each do |article| %>
+  <% @articles.each do |article| %>
     <tr>
       <td><%= article.title %></td>
       <td><%= article.text %></td>
@@ -18,10 +18,17 @@
       <td><%= article.email_id %></td>
       <td><%= article.college_name %></td>
       <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Destroy', article_path(article),
+      <td>
+      <%if(current_user.id == article.user_id) %>
+       <%= link_to 'Edit', edit_article_path(article) %>
+       <% end %>
+      </td>
+      <td> <% if(current_user.id ==article.user_id) %>
+      <%= link_to 'Destroy', article_path(article),
               method: :delete,
-              data: { confirm: 'Are you sure want to delete?' } %></td>
+              data: { confirm: 'Are you sure want to delete?' } %>
+                <% end %>
+              </td>
 
     </tr>
   <% end %>
