--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,15 @@
 <h1>Listing The details</h1>
+
+ <%= image_tag(current_user.image.url, size: "100x100")%>
+
+<h2>Search Articles</h2>
+
+<%= form_tag articles_path, :method => 'get' do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
  
 <table>
   <tr>
@@ -7,7 +18,6 @@
     <th>Contact_Number</th>
     <th>Email_Id</th>
     <th>College_Name</th>
-    <th> colspan="5"</th>
   </tr>
  
   <% @articles.each do |article| %>
