--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing The details</h1>
 
- <%= image_tag(current_user.image.url, size: "100x100")%>
+ <%#= image_tag(current_user.image.url, size: "100x100")%>
 
 <h2>Search Articles</h2>
 
