--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <div class="article-box">
-	<% @article.comments.each do|comment| %>
+	<% comments.each do|comment| %>
 		<%= render 'comments/comment1', comment1:comment %>
 	<% end %>
 </div>
